# bacchus-mm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  config.yaml  fly.toml  pyproject.toml  repro_double_settle.py  repro_fees.py  repro_hw.py  repro_m6.py
docs/: deploy.md
scripts/: add-key.sh  add-polymarket-key.sh
src/bacchus_mm/: __init__.py  analyze.py  config.py  crossvenue.py  eventlog.py  fees.py  health.py  main.py  marketmaker.py  reconcile.py  risk.py  selector.py
src/bacchus_mm/exchange/: __init__.py  base.py  kalshi.py  polymarket.py
src/bacchus_mm/strategy/: __init__.py  avellaneda_stoikov.py
tests/: test_attack_crossvenue_h3.py  test_attack_resub_drop.py  test_crossvenue.py  test_deploy.py  test_eventlog_analyze.py  test_fees.py  test_guard.py  test_kalshi.py  test_main.py  test_reconcile.py  test_risk.py  test_round2.py  test_selector.py  test_strategy.py
