[project]
name = "bacchus-mm"
version = "0.1.0"
description = "Open-source market-making bot for Kalshi prediction markets, with structured logs designed for LLM-assisted iteration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "certifi>=2024.2.2",
    "cryptography>=42",
    "pyyaml>=6.0",
]

[project.scripts]
bacchus-mm = "bacchus_mm.main:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bacchus_mm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
